--- a/src/main/resources/templates/generique.html
+++ b/src/main/resources/templates/generique.html
@@ -4,6 +4,7 @@
 <head th:fragment="head">
     <meta charset="UTF-8">
     <title>Escalade</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Site officiel des Amis de l'Escalade">
     <meta name="keywords" content="escalade, topo, grimpeur">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
