--- a/src/main/resources/templates/ajouterlongueur.html
+++ b/src/main/resources/templates/ajouterlongueur.html
@@ -22,70 +22,15 @@
     </div>
     <div class="form-group">
         <label for="nbPointsLongueur">Nombre de points</label>
-        <input placeholder="nombre de points" th:field="*{nbPointsLongueur}" type="text">
+        <input placeholder="nombre de points" th:field="*{nbPointsLongueur}" type="number">
         <span class="text-danger" th:errors="*{nbPointsLongueur}" th:if="${#fields.hasErrors('nbPointsLongueur')}"></span>
     </div>
     <input type="submit" value="Ajouter">
 </form>
 
-
-
-<!--
-    <form action="#" th:action="@{/ajoutertopo}" th:object="${topo}" method="post">
-        <form:errors path = "*" cssClass = "errorblock" element = "div" />
-        <div  class="form-group row">
-            <label for="nomTopo" class="col-sm-2 col-form-label">Nom</label>
-            <div class="col-sm-10">
-                <input type="text" th:field="*{nomTopo}" id="nomTopo" placeholder="nom du Topo">
-                <span th:if="${#fields.hasErrors('nomTopo')}" th:errors="*{nomTopo }"></span>
-            </div>
-        </div>
-        <div  class="form-group row">
-            <label for="descriptionTopo" class="col-sm-2 col-form-label">Description</label>
-
-            <div class="col-sm-10">
-                    <textarea th:field="*{descriptionTopo}" class="form-control" id="descriptionTopo"
-                              placeholder="description" rows="3"></textarea>
-                <span th:if="${#fields.hasErrors('descriptionTopo')}" th:errors="*{descriptionTopo}"></span>
-            </div>
-        </div>
-        <div class="form-group row">
-            <label for="region" class="col-sm-2 col-form-label">Région</label>
-            <div class="col-sm-6 col-lg-3">
-                <select th:field="*{region}" class="form-control" id="region">
-                    <option th:each="region : ${regions}" th:value="${region.regionId}" th:text="${region.nomRegion}" )>
-                        Alpes
-                    </option>
-                </select>
-            </div>
-        </div>
-        <div  class="form-group row">
-            <label for="dateParution" class="col-sm-2 col-form-label">Date parution</label>
-            <div class="col-sm-10">
-                <input type="date" class="form-control" th:field="*{dateParution}" id="dateParution" placeholder="dateParution">
-                <span th:if="${#fields.hasErrors('dateParution')}" th:errors="*{dateParution}"></span>
-            </div>
-        </div>
-        <div class="form-group row">
-            <div class="col-sm-3">
-                <label for="disponible" class="form-check-label">Disponibilité</label>
-            </div>
-            <div class="col-sm-3">
-                <input type="checkbox" class="form-check-input" th:field="*{disponible}" id="disponible"
-                       placeholder="disponible">
-            </div>
-        </div>
-
-        <input type="hidden" th:field="*{utilisateur.utilisateurId}" th:value="2" name="idUtilisateur"/>
-        <div th:if="${#fields.hasErrors('*')}">errors</div>
-
-        <input type="submit" value="Valider">
-    </form> -->
-
 </div>
 
 <hr>
-
 
 <footer th:replace="generique :: footer"></footer>
 
