--- a/src/main/resources/templates/ajoutertopo.html
+++ b/src/main/resources/templates/ajoutertopo.html
@@ -8,53 +8,53 @@
 
 <div class="container">
     <H3 class="monTitre">Ajouter un topo</H3>
-        <form action="#" th:action="@{/ajoutertopo}" th:object="${topo}" method="post">
-            <div  class="form-group row">
-                <label for="nomTopo" class="col-sm-2 col-form-label">Nom</label>
-                <div class="col-sm-10">
-                    <input type="text" th:field="*{nomTopo}" id="nomTopo" placeholder="nom du Topo"/>
-                    <span class="text-danger" th:if="${#fields.hasErrors('nomTopo')}" th:errors="*{nomTopo}"></span>
-                </div>
+    <form action="#" th:action="@{/ajoutertopo}" th:object="${topo}" method="post">
+        <div  class="form-group row">
+            <label for="nomTopo" class="col-sm-2 col-form-label">Nom</label>
+            <div class="col-sm-10">
+                <input type="text" th:field="*{nomTopo}" id="nomTopo" placeholder="nom du Topo"/>
+                <span class="text-danger" th:if="${#fields.hasErrors('nomTopo')}" th:errors="*{nomTopo}"></span>
             </div>
-            <div  class="form-group row">
-                <label for="descriptionTopo" class="col-sm-2 col-form-label">Description</label>
-                <div class="col-sm-10">
-                    <textarea th:field="*{descriptionTopo}" class="form-control" id="descriptionTopo"
-                                                        placeholder="description" rows="3"></textarea>
-                    <span class="text-danger" th:if="${#fields.hasErrors('descriptionTopo')}" th:errors="*{descriptionTopo}"></span>
-                </div>
+        </div>
+        <div  class="form-group row">
+            <label for="descriptionTopo" class="col-sm-2 col-form-label">Description</label>
+            <div class="col-sm-10">
+                <textarea th:field="*{descriptionTopo}" class="form-control" id="descriptionTopo"
+                                                    placeholder="description" rows="3"></textarea>
+                <span class="text-danger" th:if="${#fields.hasErrors('descriptionTopo')}" th:errors="*{descriptionTopo}"></span>
             </div>
-            <div class="form-group row">
-                <label for="region" class="col-sm-2 col-form-label">Région</label>
-                <div class="col-sm-6 col-lg-3">
-                    <select th:field="*{region}" id="region">
-                        <option th:each="region : ${regions}" th:value="${region.regionId}" th:text="${region.nomRegion}")>Alpes </option>
-                    </select>
-                    <span class="text-danger" th:if="${#fields.hasErrors('region')}" th:errors="*{region}"></span>
-                </div>
+        </div>
+        <div class="form-group row">
+            <label for="region" class="col-sm-2 col-form-label">Région</label>
+            <div class="col-sm-6 col-lg-3">
+                <select th:field="*{region}" id="region">
+                    <option th:each="region : ${regions}" th:value="${region.regionId}" th:text="${region.nomRegion}")>Alpes </option>
+                </select>
+                <span class="text-danger" th:if="${#fields.hasErrors('region')}" th:errors="*{region}"></span>
             </div>
-            <div  class="form-group row">
-                <label for="dateParution" class="col-sm-2 col-form-label">Date parution</label>
-                <div class="col-sm-10">
-                    <input type="date" class="form-control" th:field="*{dateParution}" id="dateParution" placeholder="dateParution">
-                    <span class="text-danger" th:if="${#fields.hasErrors('dateParution')}" th:errors="*{dateParution}"></span>
-                </div>
+        </div>
+        <div  class="form-group row">
+            <label for="dateParution" class="col-sm-2 col-form-label">Date parution</label>
+            <div class="col-sm-10">
+                <input required type="date" class="form-control" th:field="*{dateParution}" id="dateParution" placeholder="dateParution">
+                <span class="text-danger" th:if="${#fields.hasErrors('dateParution')}" th:errors="*{dateParution}"></span>
             </div>
-            <div class="form-group row">
-                <label for="disponible" class="col-sm-2 col-form-label">Disponibilité</label>
-                <div class="col-sm-2">
-                    <select th:field="*{disponible}" id="disponible" placeholder="disponible">
-                        <option value="D">Disponible</option>
-                        <option value="I">Indisponible</option>
-                        <option value="R">Réservation démandée</option>
-                    </select>
-                    <span class="text-danger" th:if="${#fields.hasErrors('disponible')}" th:errors="*{disponible}"></span>
-                </div>
+        </div>
+        <div class="form-group row">
+            <label for="disponible" class="col-sm-2 col-form-label">Disponibilité</label>
+            <div class="col-sm-2">
+                <select th:field="*{disponible}" id="disponible" placeholder="disponible">
+                    <option value="D">Disponible</option>
+                    <option value="I">Indisponible</option>
+                    <option value="R">Réservation démandée</option>
+                </select>
+                <span class="text-danger" th:if="${#fields.hasErrors('disponible')}" th:errors="*{disponible}"></span>
             </div>
-            <div class="text-danger" th:if="${#fields.hasErrors('*')}">Il y a des erreurs dans ce formulaire</div>
+        </div>
+        <div class="text-danger" th:if="${#fields.hasErrors('*')}">Il y a des erreurs dans ce formulaire</div>
 
-            <input type="submit" value="Valider">
-        </form>
+        <input type="submit" value="Valider">
+    </form>
 </div>
 
 <footer th:replace="generique :: footer"></footer>
