--- a/src/main/resources/templates/site.html
+++ b/src/main/resources/templates/site.html
@@ -135,22 +135,21 @@
     <br>
 
     <!--    COMMENTAIRES-->
-<!--todo trier par date et supprimer Manu en dur-->
     <h3>Commentaires sur ce site</h3>
     <div>
         <form action="#" th:action="@{/ajoutercommentaire}" method="post" sec:authorize="hasAuthority('user')">
             <hr>
-            <H4>Laissez un commentaires</H4>
+            <H4>Laissez un commentaire</H4>
             <div class="input-group mb-3">
                 <input id="siteid" name="siteid" type="hidden" th:value="${site.siteid}">
-                <input type="text" name="texteCommentaire" class="form-control" placeholder="Votre commentaire..." aria-label="" aria-describedby="bouton-ajouter">
+                <input required type="text" name="texteCommentaire" class="form-control" placeholder="Votre commentaire..." aria-label="" aria-describedby="bouton-ajouter">
                 <div class="input-group-append">
                     <button class="btn btn-outline-secondary" type="submit" id="bouton-ajouter">Ajouter</button>
                 </div>
             </div>
         </form>
-        <HR>
 
+        <HR>
 
         <div>
             <th:block th:each="commentaire : ${site.commentaires}">
@@ -173,15 +172,10 @@
                                 </button>
                               </div>
                               <div class="modal-body">
-
-
                                 <form action="#" th:action="@{/modifiercommentaire/{commentaireid}(commentaireid=${commentaire.commentaireId})}" th:object="${commentaire}" method="post">
                                     <div class="form-group">
-                                        <input type="text" th:value="${commentaire.texteCommentaire}" name="texteCommentaire">
-<!--todo activer le span de gestion d'erreur-->
-                                        <!--                                        <span class="text-danger" th:errors="*{texteCommentaire}" th:if="${#fields.hasErrors('texteCommentaire')}"></span>-->
+                                        <input class="form-control" type="text" th:value="${commentaire.texteCommentaire}" name="texteCommentaire">
                                     </div>
-<!--                                        <input type="text" th:value="${commentaire.texteCommentaire}" th:field="*{texteCommentaire}">-->
                                     <button type="button" class="btn btn-sm btn-secondary" data-dismiss="modal">Annuler</button>
                                     <button type="submit" class="btn btn-sm btn-primary">Enregistrer</button>
                                 </form>
@@ -189,8 +183,6 @@
                             </div>
                           </div>
                         </div>
-
-
 
                         <a class="far fa-trash-alt" th:href="@{/supprimercommentaire/{commentaireid}(commentaireid=${commentaire.commentaireId})}" title="Supprimer le commentaire"></a>
                     </span>
